hphp/test/zend/bad/ext/posix/tests/posix_errno_variation1.php.skipif
<?php 
        if(!extension_loaded("posix")) print "skip - POSIX extension not loaded"; 
        if(posix_getuid()==0) print "skip - Cannot run test as root.";    
?>